...
                    }
                    .onDelete(perform: deleteNoticias) // Acción para eliminar noticias.
                    .accessibilityIdentifier("noticiaList") // Identificador para la lista.
                }
                .listStyle(PlainListStyle()) // Estilo de lista simple.
                .navigationTitle("Noticias") // Título de la pantalla.
                .accessibilityIdentifier("adminNoticiasView") // Identificador de accesibilidad principal.
                .toolbar {
                    // Botón en la barra de herramientas para añadir una noticia.
                    ToolbarItem(placement: .navigationBarTrailing) {
                        Button(action: { showingAddNoticia = true }) {
                            Image(systemName: "plus") // Ícono de añadir.
                                .foregroundColor(.blue)
...
                        .padding()
                        .frame(maxWidth: .infinity) // Ancho máximo posible.
                        .background(Color.blue) // Fondo azul.
                        .cornerRadius(10) // Bordes redondeados.
                        .padding()
                }
                .accessibilityIdentifier("addNoticiaBottomButton") // Identificador para el botón inferior.
                .sheet(isPresented: $showingAddNoticia) {
                    // Presenta la vista para añadir noticias.
                    AddNoticiaView(usuarioActual: usuarioActual)
                        .environment(\.managedObjectContext, context) // Proporciona el contexto de Core Data.
                        .accessibilityIdentifier("addNoticiaSheet") // Identificador para la hoja modal.
                }
...
