...
            Form {
                // Sección para editar la información personal del usuario.
                Section(header: Text("Información del Usuario")) {
                    // Campo para editar el nombre del usuario.
                    TextField("Nombre", text: $nombre)
                        .autocapitalization(.words)
                        .accessibilityIdentifier("editUserNameField")

                    // Campo para editar el email del usuario.
                    TextField("Email", text: $email)
                        .keyboardType(.emailAddress)
                        .accessibilityIdentifier("editUserEmailField")
                }
...
            .toolbar {
                // Botón para guardar los cambios realizados.
                ToolbarItem(placement: .confirmationAction) {
                    Button("Guardar") {
                        saveChanges() // Llama a la función para guardar cambios.
                    }
                    .accessibilityIdentifier("editUserSaveButton")
                }

                // Botón para cancelar la edición.
                ToolbarItem(placement: .cancellationAction) {
                    Button("Cancelar") {
                        dismiss() // Cierra la vista sin guardar.
...
