...
                            selectedStudent = student // Asigna el alumno seleccionado.
                        },
                        onDelete: deleteStudent // Acción para eliminar un alumno.
                    )
                }
                .listStyle(PlainListStyle()) // Estilo de lista simple.
                .accessibilityIdentifier("usersAndStudentsList") // Identificador de accesibilidad.

                Spacer() // Añade un espaciado flexible.

                // Botones para agregar usuarios y alumnos.
                HStack {
                    Button(action: { showAddUser.toggle() }) {
...
